Fixed header z-index. Revamped the creations.

--- a/src/input.css
+++ b/src/input.css
@@ -15,15 +15,16 @@
 
   #grid-creations {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(calc(100% / 4), 1fr));
+    /* gap: 2rem; */
   }
 
-  .creationCard {
-    @apply aspect-[0.568] overflow-hidden flex items-end bg-cover flex-1 basis-[calc(25%_-_2rem)];
+  #grid-creations > a {
+    @apply aspect-[0.568] overflow-hidden;
   }
 
-  .creationCard > div {
+  #grid-creations > a > div {
+    @apply bg-cover w-full h-full duration-150;
   }
 }
 
